prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: prometheus.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: prometheus-server
                port:
                  number: 980
            path: /
            pathType: Prefix
    - host: alertmanager.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: alertmanager
                port:
                  number: 9093
            path: /
            pathType: Prefix
